# df_file_interchange

./: .gitignore  .pypirc  404.html  README.md  environment.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: do_tests.yaml
background/: index.html
code_reference__ci/: index.html
code_reference__ci_extra/: index.html
code_reference__ci_unit/: index.html
code_reference__file/: index.html
custom_info/: index.html
df_file_interchange/: __init__.py  fi_examples.py  fi_generic.py  std.py  version.py
df_file_interchange/ci/: __init__.py  base.py  examples.py  std.py  structured.py
df_file_interchange/deprecated_ci/: __init__.py  base.py  std.py
docs/: code_reference__ci.md  code_reference__file.md  custom_info.md  getting_started.md  index.md  yaml_fields.md
getting_started/: index.html
pandas_github_issues/: bad_dtype_for_csv_read.ipynb  rangeindex_list_out_of_range.ipynb
scratch/: csv_interval_array.ipynb  currency_abbreviations.txt  currency_abbreviations_processed.txt  dev_structured_metainfo.ipynb  dev_write_read_with_structured_custom_info.ipynb  pandas_stacked.ipynb  test_2.parq  test_df_no_index.parq  test_save_without_meta.csv  test_serialized_df.csv  test_serialized_df.parq  test_serialized_df.yaml  test_with_structured_custom_info.csv  test_with_structured_custom_info.yaml  test_write_parquet.ipynb
scripts/: gen_ref_pages.py
search/: search_index.json
test/: test_custom_info_extend_ci.py  test_custom_info_structured.py  test_custom_info_units.py  test_deserialize_check_types.py  test_indexing_dtypes.py  test_serialize_check_types.py  test_structured_custom_info.py  test_write_read_examples.py
yaml_fields/: index.html
(+34 files in other folders)
