[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "df_file_interchange"
authors = [{name = "Esmé Maxwell", email = "peter.maxwell@ntnu.no"}]
readme = "README.md"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/EXIOBASE/df_file_interchange"
